--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shodesh ❤️ | Dating Portfolio</title>
+    <meta name="google-site-verification" content="dajN-xYV4jsz9eftdFcIF1x5kWn3-4VUBz_oQBmDbGs" />
 </head>
 <link rel="stylesheet" href="style.css">
 
